# fastapi-htmx-template

./: .dockerignore  .env  .env.development  .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  compose.yaml  pyproject.toml  sonar-project.properties  start_check.sh  start_devserver.sh  start_pytest.sh
.github/actions/flyway-setup/: action.yml
.github/workflows/: ci.yml
db/init/development/: init_schema.sql
db/init/test/: init_schema.sql
migrations/alembic/: env.py
migrations/alembic/versions/: 2026_02_07_1927-d4cb8bc4d8e2_add_todo_table.py
migrations/sql/: V001__2026_02_07_1927-d4cb8bc4d8e2_add_todo_table.sql
scripts/: check_test_files.sh
src/: main.py
src/core/: app_env_config.py  constants.py  exception_handlers.py  lifespan.py  logger.py  settings.py  types.py
src/core/providers/: context.py  db.py  redis.py
src/core/settings/: app_env_config.py  app_settings.py  common_settings.py  db_settings.py  redis_settings.py
src/enums/: __init__.py  app_env.py  log_format.py  log_level.py
src/exceptions/: __init__.py
src/models/: __init__.py  error_response.py  todo.py  todo_completed_event.py  todo_entity.py  todo_form.py  todo_update.py
src/repositories/: todo_repository.py
src/routers/: root_router.py  todo_router.py
src/services/: todo_pubsub.py  todo_service.py
src/ui/components/: __init__.py  app_layout.py  todo_checkbox.py  todo_form_fields.py
src/ui/pages/: __init__.py  add_todo_html.py  edit_todo_html.py  index_html.py
src/utils/: __init__.py  form_data.py  form_errors.py  html_endpoint.py  htmx_only.py  render.py
static/: style.css
tests/: conftest.py
tests/core/: test_exception_handlers.py  test_settings.py
tests/core/providers/: test_db.py
tests/e2e/: config.py  conftest.py  test_example.py
tests/e2e/features/: todo.feature
tests/e2e/fixtures/: db_reset.py
tests/e2e/todo/: test_todo_e2e.py
tests/fixtures/: api.py  common.py  db.py  factories.py  forms.py  mock_pubsub_repository.py  models.py  redis.py  test_db_fixture.py
tests/models/: test_error_response.py  test_todo.py  test_todo_entity.py  test_todo_form.py
tests/repositories/: test_todo_repository.py
tests/routers/: test_root_router.py  test_todo_router.py
tests/services/: test_todo_pubsub.py  test_todo_service.py
tests/ui/components/: test_app_layout.py  test_todo_checkbox.py  test_todo_form_fields.py
tests/ui/pages/: test_index_html.py  (+2 more)
tests/utils/: test_form_data.py  test_form_errors.py  test_html_endpoint.py  test_htmx_only.py
(+1 files in other folders)
